--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,31 @@
-theme: jekyll-theme-cayman
-title: Pedro Britto
+# Site settings
+title: My Blog
+email: coolwebconfs@gmail.com
+description: My simple blog.
+baseurl: ""
+url: ""
+twitter_username: 
+avatar: "" # Set footer avatar
+paginate: 3
+
+# Build settings
+markdown: kramdown
+permalink: /:title
+
+# Default Settings
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      author: "My Author" # Set default author name
+      categories: "cats"
+      layout: "post"
+      comments: true
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
