--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Variables
 title: Pedro Britto
 description:
-  I am a Front End Web Developer and I make web development tutorials for beginners.
+  Olá, eu sou o Pedro. Sou um desenvolvedor front end.
+  Aqui compartilho o que aprendi e mostro o meu trabalho.
 baseurl: ""
 url: ""
 
