--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Pedro Britto
 description:
   Olá, eu sou o Pedro. Sou um desenvolvedor front end.
   Aqui compartilho o que aprendi e mostro o meu trabalho.
-baseurl: ""
-url: "https://pedrobritto.github.io"
+basepermalink: ""
+permalink: "https://pedrobritto.github.io"
 
 username_twitter: pibritto
 
@@ -33,5 +33,4 @@ defaults:
     values:
       author: "Pedro Britto"
       layout: "post"
-      permalink: /blog/:title
       comments: true
