fixes jekyll front matter for meta description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Variables
 title: Pedro Britto
 description:
-  Olá, eu sou o Pedro. Sou um desenvolvedor front end.
+  Olá! Eu sou o Pedro, um desenvolvedor front end.
   Aqui compartilho o que aprendi e mostro o meu trabalho.
 baseurl: ""
 url: "https://pedrobritto.github.io"
