--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,10 +1,12 @@
 # Variables
 title: Pedro Britto
 description:
-  Olá, eu sou o Pedro. Sou um desenvolvedor front end.
+  Olá! Eu sou o Pedro, um desenvolvedor front end.
   Aqui compartilho o que aprendi e mostro o meu trabalho.
 baseurl: ""
 url: ""
+
+username_twitter: pibritto
 
 # Includes
 include: ["_pages"]
@@ -31,5 +33,4 @@ defaults:
     values:
       author: "Pedro Britto"
       layout: "post"
-      permalink: /blog/:title
       comments: true
