--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,10 +1,8 @@
-- name: Início
-  url: /
-- name: Blog
+- name: Artigos
   url: /blog/
-- name: Notas
-  url: /notas/
 - name: Portfólio
   url: /portfolio/
+- name: Notas
+  url: /notas/
 - name: CV
   url: /cv/
