--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
   Olá! Eu sou o Pedro, um desenvolvedor front end.
   Aqui compartilho tudo que aprendi em meus estudos.
 baseurl: ""
-url: "http://pedrobritto.com"
+url: "https://pedrobritto.github.io"
 
 username_twitter: pibritto
 
